Fixed bullet, spacing and padding issues

--- a/pages/products/style/style.scss
+++ b/pages/products/style/style.scss
@@ -76,7 +76,7 @@ body {
 }
 
 .about-us {
-	padding-left: 0;
+	padding-left: 3rem;
 }
 
 @media screen and (width: 1366px) {
